# swap-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cc  test.py  test.sh
baseline/: client.py  compile_grpc.sh  ds_grpc_server.py
baseline/TFLMS/: run.py
baseline/deepspeed/: compile_grpc.sh  message_pb2.py  message_pb2_grpc.py  server.py
baseline/deepspeed/protos/: message.proto
baseline/deterministic/deepspeed/: router.py  server.py
baseline/deterministic/tritonserver/: router.py
baseline/protos/: message.proto
cmake/: FindOnnxRuntime.cmake
common/: consts.h
config/confidence/: vit.json
config/deepspeed/: ds_config_stage0.json  ds_config_stage2.json  ds_config_stage3.json  ds_config_stage3_nvme.json
config/t5x/base/: config.json
config/t5x/base/e128/: base_eval.gin
config/t5x/base/e256/: base_eval.gin  config.json  switch_base.gin
config/t5x/large/e128/: base_eval.gin  config.json
config/t5x/xxl/e128/: base_eval.gin
docker/: Dockerfile
plots/: avg_energy.py  avg_latency.py  avg_throughput.py  contention_breakdown.py  memory_scaling.py  moe_cond_prob.py  plot_beamwidth.py  plot_breakdown.py  plot_contention.py  plot_dram_cache.py  plot_expert_corr.py  plot_expert_density.py  plot_hitrate.py  plot_latency.py  plot_latency_cpu.py  plot_legend.py  plot_miou.py  plot_moe.py  plot_multi_latency.py  plot_prefetch_buckets.py  plot_resource_lat.py  plot_resource_tp.py  plot_scaling.py  plot_scaling_size.py  plot_tp_cpu.py  plot_utilization.py  plot_wait_time_cdf.py  prefetch_rate.py  runtime_adaptation.py  wait_time_cdf.py
protos/: message_pb2.py  message_pb2_grpc.py  pb_dtype.py
pysrc/: cascader.py  client.py  connector.py  dummy_onnx.py  export_onnx.py  moe_glue_triton_client.py  single_vit_client.py
pysrc/pipe/: base.py  bert.py  distilbert.py  gpt.py  moe.py  t5.py  vit.py  vit_expert.py
pysrc/transformer/switch/: __init__.py  configuration_switch.py  modeling_switch.py  modeling_switch_ds.py  modeling_switch_ds_pipe.py  modeling_switch_transformers.py  modeling_triton_expert.py
pyutils/: ckpt_config.py  ckpt_load.py  vit_images_preprocess.py
scripts/: convert_hf_ckpt_to_torchscript.py  dataset_summary.py  ds_switch.py  flax_load.py  gen_t5x_agg_cfg.py  gen_t5x_agg_cfg_shm.py  gen_t5x_agg_cfg_sync.py  gen_t5x_ensemble_cfg.py  onnx_partition.py  pyswitch.py  switch.py  switch.sh  switch2tf.py  test.py  test_model_sanity.py  torch_pipe_to_onnx.py  torch_to_onnx.py  tritonswitch.py
simulator/: fetch_engines.py  simulator.py  test.sh
tests/: build_docker.sh  latency_test.sh  start_client.sh  start_docker.sh  start_ds_client.sh  start_server.sh  start_triton_client.sh
tests/config/: ds_config_zero2.json  ds_config_zero3.json  ds_config_zero3_cpu.json  zero_stage3.json  zero_stage3_inference.json
tests/cpp/: CMakeLists.txt  LRU.cc  build.sh  memory_pool.h  stream_pool.h  test_copy.cc  test_cuda_copy.cc  test_dlopen.cc  test_memory.cc  test_model.cc  test_unified_memory.cc  trace_model.py
tests/python/: alloc.cc  convert_torchscript.py  dataloader.py  ds_inference.py  ds_inference.sh  ds_inference_gpu.py  ds_inference_moe.py  ds_sanitize_check.py  gpu_utilization.py  module_hook.py  nllb_inference.py  test_bminf.py  test_memory.py  test_pytorch.py  test_shm.py
tests/python/nllb_moe/: __init__.py  configuration_nllb_moe.py  modeling_nllb_moe.py
